--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <packaging>pom</packaging>
 
     <properties>
+        <spring-cloud.version>2023.0.0</spring-cloud.version>
         <java.version>17</java.version>
         <spring-boot.version>3.0.13</spring-boot.version>
         <mysql.version>8.2.0</mysql.version>
@@ -26,6 +27,14 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-dependencies</artifactId>
+            <version>${spring-cloud.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
