--- a/gj-cloud-gateway/pom.xml
+++ b/gj-cloud-gateway/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>gj-cloud-gateway</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>gj-cloud-gateway</name>
 	<description>gj-cloud-gateway</description>
 
