--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
     <version>1.0.0</version>
     <packaging>pom</packaging>
 
+
+    <modules>
+        <module>gj-cloud-common</module>
+        <module>gj-cloud-base</module>
+        <module>gj-cloud-gateway</module>
+        <module>gj-cloud-security</module>
+    </modules>
+
     <properties>
         <spring-cloud.version>2023.0.0</spring-cloud.version>
         <java.version>17</java.version>
