--- a/gj-cloud-gateway/src/main/resources/application.yml
+++ b/gj-cloud-gateway/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:dev, mysql}
 
+  application:
+    name: gateway
+
   cloud:
     nacos:
       discovery:
@@ -18,11 +21,31 @@ spring:
 #          uri: https://example.org # 路由的目标地址（固定地址）
           predicates: # 路由断言，判断请求是否符合路由规则的条件
             - Path=/base/**
+          filters:
+            - AddRequestHeader=Truth
         - id: security-route
           uri: lb://security
           predicates:
             - Path=/security/**
 #            - Cookie=mycookie,mycookievalue
 #            -
-  application:
-    name: gateway
+      default-filters:
+        - AddRequestHeader=Truth
+
+      # 全局跨域处理
+      globalcors:
+        add-to-simple-url-handler-mapping: true # 解决options请求拦截器问题
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: # 允许跨域的网站
+              - "http://localhost:8080"
+              - "https://www.example.org"
+            allowedMethods: # 允许跨域的ajax请求
+              - "GET"
+              - "POST"
+              - "DELETE"
+              - "PUT"
+              - "OPTIONS"
+            allowedHeaders: "*" # 允许在请求中携带的头信息
+            allowCredentials: true # 是否允许携带 cookie
+            maxAge: 60000 # 本次跨域检测的有效期
