--- a/gj-cloud-gateway/src/main/resources/bootstrap-dev.yml
+++ b/gj-cloud-gateway/src/main/resources/bootstrap-dev.yml
@@ -8,6 +8,9 @@ spring:
       config:
         server-addr: ${NACOS_CONFIG_SERVER_ADDR:localhost:8848} # Nacos 服务器地址
         namespace: ${NACOS_CONFIG_NAMESPACE:dev} # 使用的 Nacos 的命名空间，默认为 null
+        shared-configs:
+          - data-id: common.yaml
+            group: DEFAULT_GROUP
         file-extension: yaml # 使用的 Nacos 配置集的 dataId 的文件拓展名，同时也是 Nacos 配置集的配置格式，默认为 properties
         enabled: true
         import-check:
