--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,9 @@
         <java.version>17</java.version>
         <spring-boot.version>3.0.13</spring-boot.version>
         <mysql.version>8.2.0</mysql.version>
+        <redis.version>3.2.1</redis.version>
+        <redisson.version>3.25.2</redisson.version>
+        <mybatis.version>3.0.3</mybatis.version>
         <zaxxer.version>5.1.0</zaxxer.version>
         <nacos.version>2022.0.0.0</nacos.version>
         <maven.compiler.source>17</maven.compiler.source>
@@ -73,6 +76,21 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+
 
         <!-- jooq的sql生成框架 -->
 <!--        <dependency>-->
@@ -151,6 +169,29 @@
                 <version>${spring-cloud-gateway.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>${redisson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>${redis.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.version}</version>
+            </dependency>
+
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-starter-aop</artifactId>-->
+<!--                <version>2.1.11.RELEASE</version>-->
+<!--            </dependency>-->
 <!--            <dependency>-->
 <!--                <groupId>org.springframework.boot</groupId>-->
 <!--                <artifactId>spring-boot-starter-web</artifactId>-->
